2600_conteneurisation_03_k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pod1
  labels:
    name: pod1
---
apiVersion: v1
kind: Namespace
metadata:
  name: pod2
