2600_conteneurisation_03_k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-vulnerable
  namespace: pod1
spec:
  selector:
    matchLabels:
      app: web-vulnerable
  replicas: 1
  template:
    metadata:
      labels:
        app: web-vulnerable
    spec:
      containers:
      - name: web-app
        image: python:3.9-slim
        ports:
        - containerPort: 8080
        command: ["/bin/bash", "-c"]
        args:
          - |
            [...]
        securityContext:
          allowPrivilegeEscalation: true
