2600_conteneurisation_03_k8s/ssh-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssh-service
  namespace: pod2
spec:
  selector:
    app: ssh-vulnerable
  ports:
  - port: 22
    targetPort: 22
  type: ClusterIP
