2600_conteneurisation_03_k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: pod1
spec:
  selector:
    app: web-vulnerable
  ports:
  - port: 80
    targetPort: 8080
  type: NodePort
